# volto-form-block

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .release-it.json  CHANGELOG.md  Makefile  README.md  babel.config.js  docker-compose.yml  package.json  pnpm-lock.yaml  towncrier.toml
.github/workflows/: acceptance.yml  backend.yml  frontend.yml  main.yml  storybook.yml
acceptance/: ci.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  instance.yaml  pyproject.toml  setup.py
backend/news/: .changelog_template.jinja
backend/scripts/: create_site.py
backend/src/collective/volto/formsupport/: __init__.py  configure.zcml  dependencies.zcml  interfaces.py  permissions.zcml  profiles.zcml  setuphandlers.py  testing.py  upgrades.py  upgrades.zcml  utils.py
backend/src/collective/volto/formsupport/actions/: configure.zcml  email.py  store.py
backend/src/collective/volto/formsupport/browser/: configure.zcml  email_confirm_view.py  send_mail_template.pt  send_mail_template_table.pt
backend/src/collective/volto/formsupport/browser/templates/: email_confirm_view.pt
backend/src/collective/volto/formsupport/captcha/: __init__.py  configure.zcml  hcaptcha.py  honeypot.py  norobots.py  recaptcha.py  vocabularies.py
backend/src/collective/volto/formsupport/datamanager/: catalog.py  configure.zcml
backend/src/collective/volto/formsupport/locales/: collective.volto.formsupport.pot  update.py  update.sh
backend/src/collective/volto/formsupport/locales/de/LC_MESSAGES/: collective.volto.formsupport.po
backend/src/collective/volto/formsupport/locales/es/LC_MESSAGES/: collective.volto.formsupport.po
backend/src/collective/volto/formsupport/locales/fr/LC_MESSAGES/: collective.volto.formsupport.po
backend/src/collective/volto/formsupport/locales/it/LC_MESSAGES/: collective.volto.formsupport.po
backend/src/collective/volto/formsupport/locales/pt_BR/LC_MESSAGES/: collective.volto.formsupport.po
backend/src/collective/volto/formsupport/processors/: __init__.py  configure.zcml  email.py  store.py
backend/src/collective/volto/formsupport/profiles/default/: browserlayer.xml  catalog.xml  metadata.xml  rolemap.xml
backend/src/collective/volto/formsupport/profiles/default/registry/: main.xml
backend/src/collective/volto/formsupport/profiles/uninstall/: browserlayer.xml
backend/src/collective/volto/formsupport/restapi/: configure.zcml
backend/src/collective/volto/formsupport/restapi/deserializer/: blocks.py  configure.zcml
backend/src/collective/volto/formsupport/restapi/serializer/: blocks.py  configure.zcml
backend/src/collective/volto/formsupport/restapi/services/: configure.zcml
backend/src/collective/volto/formsupport/restapi/services/form_data/: clear.py  configure.zcml  csv.py  form_data.py
backend/src/collective/volto/formsupport/restapi/services/submit_form/: configure.zcml  post.py
backend/src/collective/volto/formsupport/restapi/services/validation/: configure.zcml  email.py
backend/src/collective/volto/formsupport/scripts/: cleansing.py
backend/src/collective/volto/formsupport/testing/: __init__.py  configure.zcml  event_handler.py
backend/src/collective/volto/formsupport/tests/: test_captcha.py  test_deserialize_block.py  test_event.py  test_honeypot.py  test_send_action_form.py  test_serialize_block.py  test_setup.py  test_store_action_form.py
backend/tests/: conftest.py
backend/tests/functional/: conftest.py  test_captcha.py  test_deserialize_block.py  test_email_processor.py  test_event.py  test_send_action_form.py  test_serialize_block.py  test_store_action_form.py  test_store_processor.py
backend/tests/setup/: test_setup_install.py  test_setup_uninstall.py
dockerfiles/: Dockerfile  Dockerfile.acceptance  Dockerfile.acceptance-backend  Dockerfile.dev  docker-compose.yml
frontend/: .eslintrc.js  Dockerfile  Makefile  mrs.developer.json  package.json  pnpm-lock.yaml  volto.config.js
frontend/.github/workflows/: acceptance.yml  changelog.yml  code.yml  i18n.yml  unit.yml
frontend/volto-form-block/frontend/: Dockerfile
locales/: volto.pot
locales/de/LC_MESSAGES/: volto.po
locales/en/LC_MESSAGES/: volto.po
locales/es/LC_MESSAGES/: volto.po
locales/eu/LC_MESSAGES/: volto.po
locales/fr/LC_MESSAGES/: volto.po
locales/it/LC_MESSAGES/: volto.po
locales/ja/LC_MESSAGES/: volto.po
locales/nl/LC_MESSAGES/: volto.po
locales/pt/LC_MESSAGES/: volto.po
locales/pt_BR/LC_MESSAGES/: volto.po
locales/ro/LC_MESSAGES/: volto.po
old/: .editorConfig  package.json
src/: fieldSchema.js  formSchema.js  i18n.js  index.js
src/actions/: index.js
src/components/: DataTable.css  DataTable.jsx  Edit.jsx  EditBlock.jsx  Field.css  Field.jsx  Form.jsx  FormResult.jsx  FormView.css  FormView.jsx  Sidebar-old.jsx  Sidebar.css  Sidebar.jsx  SidebarDataActions.jsx  ValidateConfigForm.jsx  View.jsx  index.js  utils.js
src/components/FieldTypeSchemaExtenders/: FromSchemaExtender.js  HiddenSchemaExtender.js  SelectionSchemaExtender.js  YesNoSchemaExtender.js  index.js
src/components/Widget/: Button.jsx  Captcha.jsx  CheckboxListWidget.css  CheckboxListWidget.jsx  CheckboxWidget.css  CheckboxWidget.jsx  DatetimeWidget.jsx  EmailWidget.jsx  FileWidget.jsx  GoogleReCaptchaWidget.jsx  HCaptchaWidget.jsx  HiddenWidget.jsx  HoneypotCaptchaWidget.css  HoneypotCaptchaWidget.jsx  HoneypotWidget.jsx  NoRobotsCaptchaWidget.jsx  NumberWidget.jsx  OTPWidget.css  OTPWidget.jsx  RadioWidget.css  RadioWidget.jsx  SelectWidget.jsx  TextWidget.jsx  TextareaWidget.jsx  VisibilityConditionsWidget.css  VisibilityConditionsWidget.jsx  index.js
src/helpers/: conditions-list.js  react-select.js  show_when.js  validators.js
src/reducers/: index.js
